--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,22 +1,6 @@
-.example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
-  
-  .example-full-width {
-    width: 100%;
-  }
 
-  section {
-    display: table;
-  }
+
   
-  .example-button-row {
-    width: 490px;
-    display: flex;
-    align-items: center;
-  }
   
   .example-button-row .mat-button-base {
     margin: 8px 8px 8px 0;
@@ -30,7 +14,31 @@
   align-items: center;
 }
 
-.example-spacer {
-  flex: 1 1 auto;
+.fields {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+
+.example-container .mat-form-field + .mat-form-field {
+  margin-left: 8px;
+}
+
+.example-right-align {
+  text-align: right;
+}
+
+input.example-right-align::-webkit-outer-spin-button,
+input.example-right-align::-webkit-inner-spin-button {
+  display: none;
+}
+
+input.example-right-align {
+  -moz-appearance: textfield;
+}
+
+.example-container .mat-form-field + .mat-form-field {
+  margin-left: 8px;
 }
   
