pagina noua, schimbari ui

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
 <p>
   <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <span>Meniu</span>
+      <a routerLink="/home" routerLinkActive="active" class="text">Meniu</a>
       <span class="example-spacer"></span>
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+      <!-- <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
         <mat-icon>menu</mat-icon>
-      </button>
+      </button> -->
+      <a routerLink="/login" routerLinkActive="active" class="text">Login</a>
     </mat-toolbar-row>
   </mat-toolbar>
   
