--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -1,10 +1,10 @@
+.example-button-row .mat-button-base {
+  margin: 8px 8px 8px 0;
+}
 
-
-  
-  
-  .example-button-row .mat-button-base {
-    margin: 8px 8px 8px 0;
-  }
+.example-button-row {
+  margin-top: 15px;
+}
 
 .container {
   display: flex;
