schimbari pagina produse

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <p>
   <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <a routerLink="/home" class="text-meniu">Meniu</a>
+      <a routerLink="/home" class="text-meniu" mat-button>Meniu</a>
       <span class="example-spacer"></span>
       <!-- <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
         <mat-icon>menu</mat-icon>
       </button> -->
-      <a routerLink="/auth" class="text-login">Login</a>
+      <a routerLink="/auth" class="text-login" mat-button>Login</a>
     </mat-toolbar-row>
   </mat-toolbar>
   
