--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -40,7 +40,7 @@
     
         <div class="example-button-row">
             <button mat-raised-button color="primary" type="submit" [disabled]="!authForm.valid">{{ isLogged ? 'Login' : 'Sing Up' }}</button>
-            <button mat-raised-button color="primary" (click)="onSwitchMode()" type="button">Switch to {{ isLogged ? 'Sign Up' : 'Login' }}</button>
+            <button mat-raised-button color="primary" (click)="onSwitchMode()" type="button">Schimbă pe {{ isLogged ? 'Sign Up' : 'Login' }}</button>
         </div>
       </div>
     
