--- a/src/app/produse/produse.component.html
+++ b/src/app/produse/produse.component.html
@@ -1,24 +1,19 @@
-<div *ngFor="let product of products">
+
     <mat-card class="example-card">
+      
         <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>
-            <app-produse-lista>
-              {{product.title}}
-            </app-produse-lista>
-          </mat-card-title>
-          <mat-card-subtitle>{{product.description}}</mat-card-subtitle>
-        </mat-card-header>
+          
+     
+              <app-produse-lista></app-produse-lista>
+      
        
-        <mat-card-content>
-          <p>
-            {{product.description}}
-          </p>
-        </mat-card-content>
+        </mat-card-header>
+ 
         <app-produse-info></app-produse-info>
         <mat-card-actions>
           <button mat-button>Add</button>
           <button mat-button>Edit</button>
         </mat-card-actions>
+   
       </mat-card>
-</div>
+
