--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,12 +1,15 @@
-<mat-card class="card">
-    <mat-card-title>Lista</mat-card-title>
-    <app-shopping-edit></app-shopping-edit>
-    <mat-card-actions class="buttons">
-        <div>
-            <button mat-button>Add</button>
-            <button mat-button>Edit</button>
-        </div>
-        <button mat-button (click)="openDialog('0ms', '0ms')" class="delete-button">Delete</button>
-    </mat-card-actions>
-</mat-card>
+<div *ngFor="let product of products" class="grid-container">
+        <mat-card class="card">
+            <mat-card-title>{{product.title}}</mat-card-title>
+            <app-shopping-edit></app-shopping-edit>
+            <mat-card-actions class="buttons">
+                <div>
+                    <button mat-button>Add</button>
+                    <button mat-button>Edit</button>
+                </div>
+                <button mat-button (click)="openDialog('0ms', '0ms')" class="delete-button">Delete</button>
+            </mat-card-actions>
+        </mat-card>
+
+</div>
 
