--- a/src/app/produse/produse.component.html
+++ b/src/app/produse/produse.component.html
@@ -1,19 +1,21 @@
 
-    <mat-card class="example-card">
-      
+
+      <div class="container">
         <mat-card-header>
           
      
-              <app-produse-lista></app-produse-lista>
-      
-       
-        </mat-card-header>
- 
-        <app-produse-info></app-produse-info>
-        <mat-card-actions>
-          <button mat-button>Add</button>
-          <button mat-button>Edit</button>
-        </mat-card-actions>
+          <app-produse-lista></app-produse-lista>
+  
    
-      </mat-card>
+    </mat-card-header>
+
+    <!-- <app-produse-info></app-produse-info> -->
+    <mat-card-actions class="buttons">
+      <button mat-button class="button-add">Add</button>
+      <button mat-button class="button-edit">Edit</button>
+    </mat-card-actions>
+      </div>
+
+
+  
 
