--- a/src/app/produse/produse-lista/produse-lista.component.html
+++ b/src/app/produse/produse-lista/produse-lista.component.html
@@ -63,5 +63,11 @@
 
         
      </mat-card>
+     
     </div>
+    
  </div>
+ <mat-card class="product">
+    <button mat-icon-button routerLink="add-product"><mat-icon class='mat-icon'>add</mat-icon></button>
+  </mat-card>
+  <app-parent></app-parent>
