--- a/src/app/produse/produse.component.scss
+++ b/src/app/produse/produse.component.scss
@@ -1,8 +1,12 @@
 .container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .buttons {
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
