--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,12 +8,13 @@
         <span class="example-spacer"></span>
 
         <div class="navbar-list">
-            <button mat-button [matMenuTriggerFor]="menu">Manage</button>
-        <mat-menu #menu="matMenu">
+            <!-- <button mat-button [matMenuTriggerFor]="menu">Manage</button> -->
+        <!-- <mat-menu #menu="matMenu">
             <button mat-menu-item>Salveaza datele</button>
             <button mat-menu-item>Fetch datele</button>
-        </mat-menu>
+        </mat-menu> -->
         <a routerLink="/login" class="text-login" mat-button>Login</a>
+  
         </div>
         
         
