--- a/src/app/produse/produse.component.html
+++ b/src/app/produse/produse.component.html
@@ -12,8 +12,8 @@
    
     <!-- <app-produse-info></app-produse-info> -->
     <mat-card-actions class="buttons">
-      <button mat-button matTooltip="Add new product" class="button-add">Add</button>
-      <button mat-button matTooltip="Edit products" class="button-edit">Edit</button>
+      <!-- <button mat-button matTooltip="Add new product" class="button-add">Add</button>
+      <button mat-button matTooltip="Edit products" class="button-edit">Edit</button> -->
     </mat-card-actions>
       </div>
 
