--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,11 +1,17 @@
-<div *ngFor="let product of products" class="grid-container">
+<div *ngIf="cartItems.length === 0">
+    <div class="alert">Coșul tău este gol</div>
+    <span ></span>
+</div>
+<div *ngIf="cartItems.length > 0">
+    <div *ngFor="let item of cartItems" class="grid-container">
         <mat-card class="card">
-            <mat-card-title>{{product.title}}</mat-card-title>
-            <app-shopping-edit></app-shopping-edit>
+            <mat-card-title>{{item.title}}</mat-card-title>
+            <!-- <app-shopping-edit></app-shopping-edit> -->
+            <mat-card-header>{{item.price | currency: 'RON'}}</mat-card-header>
             <mat-card-actions class="buttons">
                 <div>
-                    <button mat-button>Add</button>
-                    <button mat-button>Edit</button>
+                    <!-- <button mat-button>Add</button>
+                    <button mat-button>Edit</button> -->
                 </div>
                 <button mat-button (click)="openDialog('0ms', '0ms')" class="delete-button">Delete</button>
             </mat-card-actions>
@@ -13,3 +19,28 @@
 
 </div>
 
+<strong class="total">Total: </strong>
+<!-- <a routerLink="/shopping-cart" class="text-login" mat-button>
+    <i class="material-icons">shopping_cart</i>Checkout
+  </a> -->
+
+  <form [formGroup] = "checkoutForm" (ngSubmit)="onSubmit()">
+    <div>
+        <label for="name">
+          Name
+        </label>
+        <input id="name" type="text" formControlName="name">
+      </div>
+    
+      <div>
+        <label for="address">
+          Address
+        </label>
+        <input id="address" type="text" formControlName="address">
+      </div>
+    
+      <button mat-button class="button" type="submit">Cumpara</button>
+  </form>
+
+
+</div>
