--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -13,33 +13,33 @@
                     <!-- <button mat-button>Add</button>
                     <button mat-button>Edit</button> -->
                 </div>
-                <button mat-button (click)="openDialog('0ms', '0ms')" class="delete-button">Delete</button>
+                <button mat-button (click)="openDialog('0ms', '0ms')" class="delete-button">Ștergere</button>
             </mat-card-actions>
         </mat-card>
 
 </div>
 
-<strong class="total">Total: </strong>
+<!-- <strong class="total">Total: </strong> -->
 <!-- <a routerLink="/shopping-cart" class="text-login" mat-button>
     <i class="material-icons">shopping_cart</i>Checkout
   </a> -->
 
-  <form [formGroup] = "checkoutForm" (ngSubmit)="onSubmit()">
-    <div>
+  <form [formGroup] = "checkoutForm" (ngSubmit)="onSubmit()" class="checkout">
+    <div class="name">
         <label for="name">
-          Name
+          Nume
         </label>
         <input id="name" type="text" formControlName="name">
       </div>
     
-      <div>
+      <div class="address">
         <label for="address">
-          Address
+          Adresă
         </label>
         <input id="address" type="text" formControlName="address">
       </div>
     
-      <button mat-button class="button" type="submit">Cumpara</button>
+      <button mat-raised-button class="buy-button" type="submit" color="primary">Cumpără</button>
   </form>
 
 
