--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -41,4 +41,12 @@ input.example-right-align {
 .example-container .mat-form-field + .mat-form-field {
   margin-left: 8px;
 }
+
+.login-google {
+  margin-left: 10px;
+}
+
+.googleBtn {
+  margin-top: 10px;
+}
   
